syntax = "proto3";

option go_package = "internal/generated/dbus/consume/uziprocessed";

message UziProcessed {
    string uzi_id = 100;
    repeated NodeWithSegments nodes_with_segments = 200;
}

message Node {
    bool ai = 100;
    double tirads_23 = 400;
    double tirads_4 = 500;
    double tirads_5 = 600;
}

message Segment {
    string image_id = 100;
    bytes contor = 200;
    double tirads_23 = 300;
    double tirads_4 = 400;
    double tirads_5 = 500;
}

message NodeWithSegments {
    Node node = 100;
    repeated Segment segments = 200;
}